# meal_planner

./: .gitignore  README.md  app.py  docker-compose.yml  note.py  pyproject.toml  requirements.txt
Agent/: qdrant_manager.py  scheduler.py
Agent/prompts/: prompt.py
Agent/test/: agent_test.ipynb  fitz_test.ipynb  llm_library_test.ipynb
Agent/tools/: tools.py
data/: csv_edit.ipynb  db_migration.py  set_qdrant.py
data/docs/RAG_Agent 질문 목록/: Gemini 2.0 Flash_test3.txt  Gemini 2.5 Pro Preview_test3.txt  question_list_100.txt
data/docs/disease/: get_data.py  건강기능식품.md  건강기능식품1.md  건강체중을_위한_식이_조절.md  건강하게_염분_섭취_하는_방법!_알려드겠습니다!.md  건강하게_탄수화물_먹는_방법!_알려드리겠습니다!.md  고혈압_환자의_식이요법.md  고혈압과_눈(고혈압망막병증).md  고혈압심장질환.md  노인_고혈압.md  노인_당뇨병.md  노인_변비.md  노인_운동.md  당뇨환자의_식사요법.md  당뇨환자의_약물요법.md  당뇨환자의_운동요법.md  대변_이상.md  대사증후군.md  변비.md  복부_팽만.md  복통.md  빈혈.md  설사.md  소변이상(단백뇨).md  소변이상(당뇨).md  소화불량.md  식이영양(영유아).md  식이영양(임산부).md  식이영양.md  식품_오염.md  영양표시_읽는_법!_알려드리겠습니다!.md  운동.md  위식도역류질환.md  위염.md  음주.md  이상지질혈증_식사요법.md  이유기보충식(이유식).md  입덧.md  체중_감소.md
db/: database.py  db_manager.py
db/db_mixin/: food_mixin.py  user_mixin.py
db/tables/: food_table.py  user_table.py
model/domain/: food.py  user.py
model/schemas/: user.py
router/agent/: agent_router.py
router/food/: food_router.py
router/user/: user_router.py
static/css/: style.css
static/js/: script.js
templates/: dashboard.html  index.html  login.html  register.html
test/: fastapi_test.py  mysql_test.py  rag_test.ipynb  requirements.txt  sqlalchemy_test.py
